--- a/Day4/Assignment/style.css
+++ b/Day4/Assignment/style.css
@@ -26,33 +26,34 @@
   width: 100%;
   height: 100%;
   float: center;
+  margin-bottom: 20px;
 }
 .content {
   width: 23%;
   height: 150px;
   background-color: gray;
-  margin: 1% 1%;
+
   float: left;
 }
 .sidebar {
   width: 23%;
   height: 150px;
   background-color: blue;
-  margin: 1% 1%;
+  margin-left: 37px;
   float: left;
 }
 .footer {
   width: 23%;
   height: 150px;
   background-color: wheat;
-  margin: 1% 1%;
+  margin-left: 37px;
   float: left;
 }
 .footerr {
   width: 23%;
   height: 150px;
   background-color: orange;
-  margin: 1% 1%;
+  margin-left: 37px;
   float: left;
 }
 .container {
@@ -82,4 +83,8 @@
   height: 120px;
   background-color: brown;
   float: left;
+}
+
+body {
+  margin: 0 50px 0 50px;
 }
